--- a/app/Resources/views/crmtipocampania/index.html.twig
+++ b/app/Resources/views/crmtipocampania/index.html.twig
@@ -77,6 +77,7 @@
                 "language": {
                     "info": "{{dtInfo}} _PAGE_ de _PAGES_",
                     "infoEmpty": "{{dtInfoEmpty}}",
+                    "zeroRecords": "{{dtZeroRecords}}",
                     "emptyTable": "{{dtEmptyTable}}",
                     "paginate": { 
                         "next": "{{dtNext}}",
