--- a/app/Resources/views/ctletapaventa/index.html.twig
+++ b/app/Resources/views/ctletapaventa/index.html.twig
@@ -97,6 +97,7 @@
 		                "language": {
 		                    "info": "{{dtInfo}} _PAGE_ de _PAGES_",
 		                    "infoEmpty": "{{dtInfoEmpty}}",
+		                    "zeroRecords": "{{dtZeroRecords}}",
 		                    "emptyTable": "{{dtEmptyTable}}",
 		                    "paginate": { 
 		                        "next": "{{dtNext}}",
