--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -1,3 +1,40 @@
-<a href="{{path('admin_ctletapaventa_index')}}" class="leftnava"><li class="leftnav left {% if menuEtapaA is defined %}active {% endif %}">{{menuEtapa}}<span class="pull-right right"><i class="{% if menuEtapaA is defined %}fa fa-arrow-right {% endif %}"></i></span></li></a>
-<a href="{{path('admin_crmtipocampania_index')}}" class="leftnava"><li class="leftnav left {% if menuCampaniaA is defined %}active {% endif %}">{{menuCampania}}<span class="pull-right right"><i class="{% if menuCampaniaA is defined %}fa fa-arrow-right {% endif %}"></i></span></li></a>
-<a href="{{path('levelcustomersatisfaction_index')}}" class="leftnava"><li class="leftnav left {% if menuSatisfaccionA is defined %}active {% endif %}">{{menuSatisfaccion}}<span class="pull-right right"><i class="{% if menuSatisfaccionA is defined %}fa fa-arrow-right {% endif %}"></i></span></li></a>         
+<a href="{{path('admin_ctletapaventa_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuEtapaA is defined %}active {% endif %}">
+		{{menuEtapa}}
+		<span class="pull-right right">
+			<i class="{% if menuEtapaA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
+<a href="{{path('admin_crmtipocampania_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuCampaniaA is defined %}active {% endif %}">
+		{{menuCampania}}
+		<span class="pull-right right">
+			<i class="{% if menuCampaniaA is defined %}fa fa-arrow-right {% endif %}"></i>
+		<span>
+	</li>
+</a>
+<a href="{{path('admin_levelcustomersatisfaction_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuSatisfaccionA is defined %}active {% endif %}">
+		{{menuSatisfaccion}}
+		<span class="pull-right right">
+			<i class="{% if menuSatisfaccionA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
+<a href="{{path('admin_notifications_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuTiempoNotificacionA is defined %}active {% endif %}">
+		{{menuTiempoNotificacion}}
+		<span class="pull-right right">
+			<i class="{% if menuTiempoNotificacionA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
+<a href="{{path('admin_providers_accounts_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuProveedorA is defined %}active {% endif %}">
+		{{menuProveedor}}
+		<span class="pull-right right">
+			<i class="{% if menuProveedorA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
