--- a/app/Resources/views/secured/login.html.twig
+++ b/app/Resources/views/secured/login.html.twig
@@ -1,5 +1,7 @@
 {% extends ':layout:layouterp.html.twig' %}
 
+{% block title -%}<title>{{tituloLogin}}</title>{% endblock %}
+
 {% block customcss %}
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ asset('Resources/customscss/login.css') }}">
@@ -9,7 +11,7 @@
     <body class="hold-transition login-page">
         <div class="login-box"  >
             <div class="login-title">
-                <b>ERP</b>SYSTEMS
+                <b>CRM</b>SYSTEMS
             </div>
             
             <div class="login-box-body">
@@ -17,12 +19,12 @@
 
                 <form action="{% block form_action %}{{ path("erpdg_security_check") }}{% endblock %}" method="post" id="frmLogin">  
                     <div class="form-group has-feedback">
-                        <input type="text" class="form-control" placeholder="Username" id="username" name="_username" value="{{ last_username }}">
+                        <input type="text" class="form-control" placeholder="{{ usernameTxt }}" id="username" name="_username" value="{{ last_username }}">
                         <span class="glyphicon glyphicon-user form-control-feedback"></span>
                     </div>
                     
                     <div class="form-group has-feedback">
-                        <input type="password" class="form-control" placeholder="Password" id="contrasenha" name="_password">
+                        <input type="password" class="form-control" placeholder="{{ passwordTxt }}" id="contrasenha" name="_password">
                         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                     </div>
                         <div class="row" style="margin-bottom: 10px;">
@@ -42,6 +44,12 @@
                 </form>                
             </div>
         </div>
+        {#<footer class="main-footer">
+            <div class="pull-right hidden-xs">
+                <b>Version</b> 1.0
+            </div>
+            <strong>Copyright &copy; 2016 <a href="#">Digitality Garage</a>.</strong> All rights reserved.
+        </footer>#}
     </body>
 {% endblock %}
 {% block js_extend %}
