--- a/app/Resources/views/crmcuenta/provider.html.twig
+++ b/app/Resources/views/crmcuenta/provider.html.twig
@@ -32,14 +32,6 @@
                             <label>{{direccionProveedor}}</label>
                             <input type="text" name="address[]" class="input-sm form-control validateInput txtAddress txtAddressFirst">
                         </div>
-                        <div class="col-md-2 city" style="margin-top:20px;">
-                            <label>{{ciudadProveedor}}</label>
-                            <select style="width:100%;" id name="addressCity[]" class="input-sm form-control validateSelect dpbCity dpbCityFirst">
-                                {% for ciudad in ciudades %}
-                                    <option value={{ciudad.id}}>{{ciudad.nombre}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
                         <div class="col-md-2 state" style="margin-top:20px;">
                             <label>{{departamentoProveedor}}</label>
                             {# <input type="text" name="" class="input-sm form-control validateInput txtState"> #}
@@ -49,8 +41,17 @@
                                     {% endfor %}
                             </select>
                         </div>
+                        <div class="col-md-2 city" style="margin-top:20px;">
+                            <label>{{ciudadProveedor}}</label>
+                            <select style="width:100%;" id name="addressCity[]" class="input-sm form-control validateSelect dpbCity dpbCityFirst">
+                                {% for ciudad in ciudades %}
+                                    <option value={{ciudad.id}}>{{ciudad.nombre}}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        
                         <div class="col-md-1 addAddress" style="margin-top:20px;">
-                            <button id="plusAddress" style="margin-top:25px;" class="btn"><i class="fa fa-plus"></i></button>
+                            <button id="plusAddress" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
                         </div>
                         <div class="clearfix"></div>
                         <div class="col-md-2 phonesType" style="margin-top:20px;">
@@ -69,16 +70,16 @@
                             <input type="text" name="phoneExt[]" class="input-sm form-control  txtExtension firstPhoneExtension">
                         </div>
                         <div class="col-md-1 addPhone" style="margin-top:20px;">
-                            <button id="plusPhone" style="margin-top:25px;" class="btn"><i class="fa fa-plus"></i></button>
+                            <button id="plusPhone" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
                         </div>
                         <div class="col-md-4 emailText" style="margin-top:20px;">
                             <label>{{emailProveedor}}</label>
                             <input type="text" name="email[]" class="input-sm form-control  txtEmail txtEmailFirst validateInput">
                         </div>
                         <div class="col-md-1 addEmail" style="margin-top:20px;">
-                            <button id="plusEmail" style="margin-top:25px;" class="btn"><i class="fa fa-plus"></i></button>
+                            <button id="plusEmail" style="margin-top:25px;" class="btn btn-success"><i class="fa fa-plus"></i></button>
                         </div>
-                        <div class="clearfix"></div> 
+                        <div class="clearfix"></div>
                         
                         <div class="col-md-12" style="margin-top:40px;">
                             <label>{{fotoProveedor}}</label>
@@ -100,7 +101,7 @@
                                     <label >{{tipoPersonaProveedor}}</label>
                                 </div>
                                 <div class="col-md-8">
-                                    <select style="margin-top:25px; width:100%;" type="text" name="persona" class="input-sm form-control validateInput dpbTipoPhone">
+                                    <select style="margin-top:25px; width:100%;" type="text" name="persona" class="input-sm form-control validateInput dpbTipoPersona">
                                         {% for persona in personas %}
                                             <option value={{persona.id}}>{{persona.nombre}}</option>
                                         {% endfor %}
@@ -113,7 +114,7 @@
                                     <label >{{industriaProveedor}}</label>
                                 </div>
                                 <div class="col-md-8">
-                                    <select style="margin-top:25px; width:100%;" type="text" name="industria" class="input-sm form-control validateInput dpbTipoPhone">
+                                    <select style="margin-top:25px; width:100%;" type="text" name="industria" class="input-sm form-control validateInput dpbIndustria">
                                         {% for industria in industrias %}
                                             <option value={{industria.id}}>{{industria.nombre}}</option>
                                         {% endfor %}
@@ -126,11 +127,11 @@
                                     <label >{{sitioWebProveedor}}</label>
                                 </div>
                                 <div class="col-md-8">
-                                    <input type="text" name="website" class="input-sm form-control txtEmail txtEmailFirst">
+                                    <input type="text" name="website" class="input-sm form-control txtWebsite">
                                 </div>
                             </div>                               
                         </div>
-                        <div class="clearfix"></div> 
+                            <div class="clearfix"></div> 
                             <div class="col-md-4 pull-right text-right" style="margin-top:20px;">
                                 <a id="btnCancel" class="btn btn-sm btn-default">{{cancel}}</a>
                                 <button id="btnSave" class="btn btn-sm btn-primary">{{save}}</button>
