--- a/app/Resources/views/ctltiemponotificacion/index.html.twig
+++ b/app/Resources/views/ctltiemponotificacion/index.html.twig
@@ -10,6 +10,11 @@
      <div class="col-md-5">
           <p class="robo" style="font-weight: 300; margin-bottom: 0px; font-size: 30px;">{{encabezadoTiempoNotificacion}}</p>
           <p class="robo" style="font-weight: 300; font-size: 14px; ">{{descripcionTiempoNotificacion}}</p>
+          {# <p id="cancelLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelLabel}}</p> #}
+          <p id="removeLabel" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{removeLabel}}</p>
+          <p id="cancelButtonText" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{cancelButtonText}}</p>
+          <p id="confirmButtonText" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{confirmButtonText}}</p>
+          <p id="alternateconfirmButtonText" class="robo hidden" style="font-weight: 300; font-size: 14px; ">{{alternateconfirmButtonText}}</p>
      </div>
 
 {% endblock %}
