--- a/app/Resources/views/layout/nav.html.twig
+++ b/app/Resources/views/layout/nav.html.twig
@@ -27,26 +27,30 @@
     
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        {% block busqueda %}<li style="margin-top: 10px !important;">
-                {#<input id="busquedaRapida" type="text" class="form-control" style="width: 300px; margin-top: 5px;" placeholder="Realize una búsqueda - (Ctrl+G)">#}
-                <select id="busquedaRapida" style="width: 250px;" class="form-control">
-                    <option value="0">{{select2Label}}</option>
-                </select>
+        {% if app.user %}
+            {% block busqueda %}
+                <li style="margin-top: 10px !important;">
+                    {#<input id="busquedaRapida" type="text" class="form-control" style="width: 300px; margin-top: 5px;" placeholder="Realize una búsqueda - (Ctrl+G)">#}
+                    <select id="busquedaRapida" style="width: 250px;" class="form-control">
+                        <option value="0">{{select2Label}}</option>
+                    </select>
+                </li>
+            {% endblock busqueda %}
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <img src="{{ asset('Photos/Empleado/')}}{#{{app.user.persona.empleado[0].foto}}#}" style="width: 25px;"> &nbsp; {#{{app.user.persona.nombres}} {{app.user.persona.apellidos}}#}<span class="caret"></span></a>
+                 <ul class="dropdown-menu">
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-key"></i></span>{{editPass}}</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-book text-muted"></i></span>{{showLog}}</a></li>
+
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="glyphicon glyphicon-cog text-muted"></i></span>{{settings}}</a></li>
+                    {% endif %}
+
+                    <li role="separator" class="divider"></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="{{ path('erpdg_logout') }}"><span class="pull-right"><i class="fa fa-sign-out text-muted"></i></span> {{logOut}}</a></li>
+                </ul> 
             </li>
-        {% endblock busqueda %}
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <img src="{{ asset('Photos/Empleado/')}}{#{{app.user.persona.empleado[0].foto}}#}" style="width: 25px;"> &nbsp; {#{{app.user.persona.nombres}} {{app.user.persona.apellidos}}#}<span class="caret"></span></a>
-             <ul class="dropdown-menu">
-                <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-key"></i></span>{{editPass}}</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="fa fa-book text-muted"></i></span>{{showLog}}</a></li>
-                {% if is_granted('ROLE_ADMIN') %}
-                <li role="presentation"><a role="menuitem" tabindex="-1" href=""><span class="pull-right"><i class="glyphicon glyphicon-cog text-muted"></i></span>{{settings}}</a></li>
-                {% endif %}
-                <li role="separator" class="divider"></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="{{ path('erpdg_logout') }}"><span class="pull-right"><i class="fa fa-sign-out text-muted"></i></span> {{logOut}}</a></li>
-            </ul> 
-        </li>
-        
+        {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
