CRUD de contacto

--- a/app/Resources/views/crmcuenta/cliente.html.twig
+++ b/app/Resources/views/crmcuenta/cliente.html.twig
@@ -1,5 +1,6 @@
 <div class="col-md-12 col-xs-12">
-            <div id="pnAdd" class="panel panel-default" style="display:none;">
+            <div id="pnAdd" style="display:none;">
+                <div class="panel panel-default">
                     <div class="panel-heading"><div class="hidden pnHeadingLabelAdd">{{pnHeadingLabelAdd}}</div><div class="hidden pnHeadingLabelEdit">{{pnHeadingLabelEdit}}</div></div>
                     <div class="panel-body">
                         <form id="frmProvider"  method="post" enctype="multipart/form-data">
@@ -18,6 +19,7 @@
                             <input id="txtId1" type="hidden" name="id1" class="input-sm form-control">
                             <input id="txtId2" type="hidden" name="id2" class="input-sm form-control">
                             <input id="txtName" type="text" name="nombre" class="input-sm form-control validateInput">
+                            <input id="iteracion" type="hidden" name="iteracion" class="input-sm form-control">
                         </div>
                         <div class="col-md-5">
                             <label>{{apellidoCliente}}</label>
@@ -138,6 +140,9 @@
                             </div>
                         </div>
                         </form>
+                          </div>  
+                          
                     {# <div class="panel-footer">Panel Footer</div> #}
+                    {% include ':crmcuenta:comments_section.html.twig' %}
             </div>
 </div>
