--- a/app/Resources/views/crmcuenta/index_cliente.html.twig
+++ b/app/Resources/views/crmcuenta/index_cliente.html.twig
@@ -8,6 +8,7 @@
 {% block customcss %}
     <link rel="stylesheet" href="{{ asset('Resources/customscss/salestage.css') }}">
     <link rel="stylesheet" href="{{ asset('Resources/slider/css/bootstrap-slider.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('Resources/customscss/timeline/timeline.css') }}">
     <style type="text/css">
         .errorform{
             border: 1px solid #F00 !important;
@@ -15,20 +16,7 @@
     </style>
 {% endblock %}
 {% block navegacion %}
-            {% include ':crm_dashboard:crm_menu.html.twig' %}
-
-              {% for tipo in tiposCuenta if tipo.id>4 %}
-                {# {% include ':crm_dashboard:crm_menu.html.twig' %} #}
-                <a href="{{path('admin_accounts_index',{nombre:tipo.nombre})|lower}}" class="leftnava">
-                    <li class="leftnav left {% if opcion is defined and tipo.nombre==opcion  %}active {% endif %}">
-                        {{tipo.nombre}}
-                        <span class="pull-right right">
-                            <i class="{% if opcion is defined and tipo.nombre==opcion  %}fa fa-arrow-right {% endif %}"></i>
-                        </span>
-                    </li>
-                </a>
-            {% endfor %}
-
+        {% include ':crmcuenta:opciones_cuenta.html.twig' %}
 {% endblock %}
 
 
@@ -88,17 +76,23 @@
 {% block js_extend %}
     
     <script type="text/javascript" src="{{ asset('Resources/validations/validation.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('Resources/persist/client/client.min.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('Resources/animations/client/client.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/client/client.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/seguimiento.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/add-comment.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/animations/client/client.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/persist/seguimiento/tags.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('Resources/bootstrap/js/moment.js') }}"></script>
     <script type="text/javascript">
         $(document).ready(function() {
             /////Definición datatable
+            $('#filterTag').removeClass('hidden');
+            var valor = $('#selectTags').val();
             var table = $('#clienteList').DataTable({
                 dom:'ftp',
                 "processing": false,
                 "serverSide": true,
                 "ajax": {
-                    "url": '{{path('admin_cliente2_data')}}',
+                    "url": '{{path('admin_cliente2_data')}}'+"?param1="+valor,
                     "type": 'GET'
                 },
                 "columns": [
@@ -147,12 +141,19 @@
                 $('.chkItemAll').prop({'checked': false});
             });
             /////Fin definición datatable
+            
+            $(document).on('change', '#selectTags', function(event) {
+                valor = $(this).val();
+                var url = Routing.generate('admin_cliente2_data')+"?param1="+valor;
+                table.ajax.url(url).load();
+            });
 
             $('#dpbTitulo').select2();
             $('.dpbIndustria').select2();
             $('.dpbInteres').select2();
             $('.dpbTipoPhone').select2();
             $('.dpbTipoPersona').select2();
+            $('#selectTags').select2();
             // $('.dpbCampania').select2();
         });
     </script>
