--- a/app/Resources/views/layout/menu.html.twig
+++ b/app/Resources/views/layout/menu.html.twig
@@ -38,3 +38,12 @@
 		</span>
 	</li>
 </a>
+
+<a href="{{path('admin_tipocuenta_index')}}" class="leftnava">
+	<li class="leftnav left {% if menuTipoCuentaA is defined %}active {% endif %}">
+		{{menuTipoCuenta}}
+		<span class="pull-right right">
+			<i class="{% if menuTipoCuentaA is defined %}fa fa-arrow-right {% endif %}"></i>
+		</span>
+	</li>
+</a>
